Phone Number Update

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                       </div>
 
                       <div class="info-item padd-15 ">
-                        <p>Phone : <span> 0766652565</span></p>
+                        <p>Phone : <span> +94 76 6652565</span></p>
                       </div>
 
                       <div class="info-item padd-15">
