--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
                       </div>
 
                       <div class="info-item padd-15 ">
-                        <p>Phone : <span> +94 76 6652565</span></p>
+                        <p>Phone : <span> +94 76 665 2565</span></p>
                       </div>
 
                       <div class="info-item padd-15">
-                        <p>City : <span> Kurunegala - North West</span></p>
+                        <p>City : <span> Kurunegala - North Western</span></p>
                       </div>
 
                       <div class="info-item padd-15">
