about me update

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                       </div>
 
                       <div class="info-item padd-15">
-                        <p>Website : <span> https://akashkavinda.github.io/PortfolioWeb</span></p>
+                        <p>Website : <span> akashkavinda.github.io/PortfolioWeb</span></p>
                       </div>
 
                       <div class="info-item padd-15">
