--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="css/skins/color-5.css" class="alternate-style" title="color-5" disabled>
   <link rel="stylesheet" href="css/style-switcher.css">
     <title>Akash Palandagama | UI / UX Designer</title>
+    <link rel="shortcut icon" href="images/logoIcon.png" type="image/x-icon">
   </head>
   <body>
     <!-- ===== Main Container Start ===== -->
