--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                               <h4 class="timeline-title"> BSc (Hons) in Information Technology
                                 Specialising in Interactive Media</h4>
                               <p class="timeline-text">I have successfully completed my four years degree program
-                                and waiting for graduation at SLIIT. I specialized in an Interactive Media degree at SLIIT.</p>
+                                and waiting for graduation at SLIIT.</p>
                           </div>
 
                            <!-- ======Timeline item===== -->
