all right received update

--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@
               <!--==== Service Item End ==== -->
           </div>
         </div>
+        <p class="contact-sub-title padd-15"> &copy; 2023 Akash Palandagama - All rights reserved</p>
        </section>
         <!--==== Servie Scection End ==== -->
         <!--==== Portfolio Scection Start ==== -->
@@ -453,6 +454,7 @@
               <!-- ===== Portfolio Item End ===== -->
             </div>
           </div>
+          <p class="contact-sub-title padd-15"> &copy; 2023 Akash Palandagama - All rights reserved</p>
         </section>
         <!--==== Portfolio Section End ==== -->
         <!--==== Contact Section Start ==== -->
@@ -498,7 +500,6 @@
             <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
             <h4 class="contact-sub-title padd-15">I'M VERY RESPONSIVE TO MESSAGES</h4>
           </div>
-
           <!-- ====== Contact Form ======-->
           <div class="row">
             <div class="contact-form padd-15"> 
@@ -538,6 +539,7 @@
             </div>
             </div>
           </div>
+          <p class="contact-sub-title padd-15"> &copy; 2023 Akash Palandagama - All rights reserved</p>
         </section>
         <!--==== Contact Section End ==== -->
       </div>
