--- a/index.html
+++ b/index.html
@@ -220,17 +220,7 @@
                                 <i class="fa fa-calendar"></i>2023-Present
                               </h3>
                               <h4 class="timeline-title"> Associate UI/UX Designer</h4>
-                              <p class="timeline-text">I am a new to this position and I will add projects soon. </p>
-                          </div>
-
-                          <!-- ======Timeline item===== -->
-                          <div class="timeline-item">
-                            <div class="circle-dot"></div>
-                              <h3 class="timeline-date">
-                                <i class="fa fa-calendar"></i>2021-2023
-                              </h3>
-                              <h4 class="timeline-title"> Freelance UI/UX Designer</h4>
-                              <p class="timeline-text">I am a freelancer in UI UX Designing and Mobile App front-end development projects. </p>
+                              <p class="timeline-text">I am a new to this position and I will add projects summary soon. </p>
                           </div>
 
                            <!-- ======Timeline item===== -->
