Update Job Summary

--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
                               <h3 class="timeline-date">
                                 <i class="fa fa-calendar"></i>2023-Present
                               </h3>
-                              <h4 class="timeline-title"> Associate UI/UX Designer</h4>
-                              <p class="timeline-text">I am a new to this position and I will add projects summary soon. </p>
+                              <h4 class="timeline-title"> Associate UI/UX Designer ( ARCHNIX (PVT) LTD )</h4>
+                              <p class="timeline-text">I am new to this position and I will add projects summary soon. </p>
                           </div>
 
                            <!-- ======Timeline item===== -->
