--- a/index.html
+++ b/index.html
@@ -220,7 +220,12 @@
                                 <i class="fa fa-calendar"></i>2023-Present
                               </h3>
                               <h4 class="timeline-title"> Associate UI/UX Designer ( ARCHNIX (PVT) LTD )</h4>
-                              <p class="timeline-text">I am new to this position and I will add projects summary soon. </p>
+                              <p class="timeline-text">Working with ISO 9001 Quality Management and ISO 27001 Information Security Management policies.
+
+                                Projects 
+                                
+                                Internal - Digital Marketing Materials (Flyers, Banners, 2D Animations, Presentations , Video Production )
+                                External - Chariot Tours and Travels Mobile Application </p>
                           </div>
 
                            <!-- ======Timeline item===== -->
