--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                       </div>
                     </div>
                     <div class="col-xl-7 col-lg-6 col-md-12 d-flex align-items-center">
-                      <div class="d-flex flex-column h-300px">
-                        <div class="text-md-start text-center">
+                      <div class="d-flex flex-column ps-md-8 ps-0">
+                        <div class=" text-md-start text-center">
                           <div class="row d-flex">
                             <h1 class="fw-bold fs-2x text-gray-800 mb-5">CampusNEXT Product Website</h1>
                             <p class="fw-semibold fs-5 text-gray-700"> The CampusNEXT product website showcases the
