--- a/index.html
+++ b/index.html
@@ -17,6 +17,18 @@
 </head>
 
 <body>
+  <div id="maintenanceModal" class="modal">
+
+    <div class="modal-content">
+      <!-- <span class="close">&times;</span> -->
+      <img src="./assets/images/empty-area-img-2.svg" class="h-150px mb-10" alt="">
+      <p class="fs-5 fw-semibold">Portfolio is undergoing a brief maintenance period. I'll be back shortly. <br>Feel
+        free to view the currently available data.</p>
+      <button class="ok-button close" id="okButton">OK</button>
+    </div>
+
+  </div>
+
   <!-- ===== Main Container Start ===== -->
   <div class="main-container">
 
@@ -226,16 +238,40 @@
     </div>
   </div>
 
-  <!-- ===== Style Switcher Start ===== -->
-  <div class="style-switcher">
-    <div class="style-switcher-toggler s-icon">
-      <i class="fas fa-cog fa-spin"></i>
-    </div>
-    <div class="day-night s-icon">
-      <i class="fas "></i>
-    </div>
-  </div>
-  <!-- ===== Style Switcher End ===== -->
+  <script>
+    // Get the modal
+    var modal = document.getElementById("maintenanceModal");
+
+    // Get the <span> element that closes the modal
+    var span = document.getElementsByClassName("close")[0];
+
+    //Get the OK button
+    var okButton = document.getElementById("okButton");
+
+    // When the page loads, show the modal
+    window.onload = function () {
+      modal.style.display = "block";
+    }
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function () {
+      modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function (event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+
+    //When the user clicks the OK button, close the modal
+    okButton.onclick = function () {
+      modal.style.display = "none";
+    }
+  </script>
+
+
   <!-- JS Files -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
