--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
                         <div class="text-md-start text-center">
                           <h1 class="fw-bold fs-2x text-gray-800 mb-5">CampusNEXT University
                             Management System</h1>
-                          <p class="fw-semibold fs-5 text-gray-800 mb-5"><span class="fw-bold text-gray-800">Project
+                          <!-- <p class="fw-semibold fs-5 text-gray-800 mb-5"><span class="fw-bold text-gray-800">Project
                               Clients
                               :</span> American University in the Emirates , Umm Al
-                            Quwain University , Kuwait College of Science and Technology </p>
+                            Quwain University , Kuwait College of Science and Technology </p> -->
                           <p class="fw-semibold fs-5 text-gray-700 mb-5">CampusNEXT is an all-in-one University
                             Management System that streamlines operations from enrollment to alumni engagement. It
                             integrates academics, staff, internships, events, and communication, creating a connected
