--- a/index.html
+++ b/index.html
@@ -66,17 +66,14 @@
 
                 <!-- hero text -->
                 <div class="mb-10">
-                  <div class="fs-2 fw-bold text-gray-800 mb-10"> <span class="highlight-span">Akash</span> is here, I am
-                    a UI
-                    UX Developer at American
-                    University in the Emirates with nearly four years of of hands-on experience 😀.
+                  <div class="fs-2 fw-bold text-gray-800 mb-10"> <span class="highlight-span">Akash</span> is here, I
+                    Design. I Code. I Keep It Real.
                   </div>
 
-                  <div class="fs-2 fw-normal text-gray-700 mb-10">I
-                    specialize in creating intuitive,
-                    user-centric digital experiences. I
-                    champion iterative design and continuous improvement, where breaking things down often leads to
-                    break throughs, all powered by a healthy dose of caffeine ☕.
+                  <div class="fs-2 fw-normal text-gray-700 mb-10">
+                    I craft user-friendly interfaces with a developer’s mindset because good design isn’t just about
+                    looking fancy, it’s about working smoothly. Every pixel has a purpose, every feature meets a need.
+                   <br><br>Fueled by coffee, I design what’s needed, not just what’s trendy. ☕
                   </div>
 
                 </div>
