--- a/index.html
+++ b/index.html
@@ -13,48 +13,22 @@
   <link rel="stylesheet" href="assets/css/button.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
   <title>Akash Palandagama | UX Develoepr</title>
-  <link rel="shortcut icon" href="assets/images/logoIcon.png ">
+  <link rel="shortcut icon" href="assets/images/akash-palandagama.jpg">
 </head>
 
 <body>
-  <div id="maintenanceModal" class="modal">
-
-    <div class="modal-content">
-      <!-- <span class="close">&times;</span> -->
-      <img src="./assets/images/empty-area-img-2.svg" class="h-150px mb-10" alt="">
-      <p class="fs-5 fw-semibold">Portfolio is undergoing a brief maintenance period. I'll be back shortly. <br>Feel
-        free to view the currently available data.</p>
-      <button class="ok-button close" id="okButton">OK</button>
-    </div>
-
-  </div>
 
   <!-- ===== Main Container Start ===== -->
   <div class="main-container">
 
-    <!-- ====== Aside Start===== -->
-    <div class="aside">
-      <div class="nav-toggler">
-        <span></span>
-      </div>
-      <ul class="nav ">
-        <li c><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
-        <li><a href="#about" class="hover-text"><i class="fa fa-user"></i>About</a></li>
-        <li><a href="#services" class="hover-text"><i class="fa fa-object-group"></i>Case Studies</a></li>
-        <li><a href="#portfolio" class="hover-text"><i class="fa fa-briefcase"></i>Showcase</a></li>
-        <li><a href="#activities" class="hover-text"><i class="fa fa-paper-plane"></i>Blog</a></li>
-        <li><a href="#contact" class="hover-text"><i class="fa fa-comments"></i>Contact</a></li>
-      </ul>
-    </div>
-
     <!-- ====== Main Content Start ===== -->
     <div class="main-content">
-      <section class="home active section " id="home">
+      <section class="home section">
 
         <div class="container">
 
           <!-- Hero Scection Start -->
-          <div class="section-padding">
+          <div class="section-padding" id="home">
             <div class="row">
 
               <div class="home-info">
@@ -66,14 +40,17 @@
 
                 <!-- hero text -->
                 <div class="mb-10">
-                  <div class="fs-2 fw-bold text-gray-800 mb-10"> <span class="highlight-span">Akash</span> is here, I
-                    Design. I Code. I Keep It Real.
+                  <div class="fs-2 fw-bold text-gray-800 mb-10"> <span class="highlight-span">Akash</span> is here, I am
+                    a UI
+                    UX Developer at American
+                    University in the Emirates with nearly four years of of hands-on experience 😀.
                   </div>
 
-                  <div class="fs-2 fw-normal text-gray-700 mb-10">
-                    I craft user-friendly interfaces with a developer’s mindset because good design isn’t just about
-                    looking fancy, it’s about working smoothly. Every pixel has a purpose, every feature meets a need.
-                   <br><br>Fueled by coffee, I design what’s needed, not just what’s trendy. ☕
+                  <div class="fs-2 fw-normal text-gray-700 mb-10">I
+                    specialize in creating intuitive,
+                    user-centric digital experiences. I
+                    champion iterative design and continuous improvement, where breaking things down often leads to
+                    break throughs, all powered by a healthy dose of caffeine ☕.
                   </div>
 
                 </div>
@@ -86,7 +63,7 @@
               </div>
 
               <div class="home-img">
-                <img src="assets/images/wfh-barista-1.jpg" class="border border-5  hover-scale "
+                <img src="assets/images/wfh-barista-1.jpg" class="border border-5 hover-scale "
                   alt="akash kavinda Palandagama">
               </div>
 
@@ -94,129 +71,39 @@
           </div>
 
           <!-- Latest Projects Scection Start -->
-          <div class="section-padding">
-            <h2 class="fw-bold fs-2tx text-gray-800 mb-md-15 mb-10">Latest Projects</h2>
+          <div class="section-padding" id="about">
+
+            <h1 class="fs-3x fw-bold mb-md-15 mb-10">Explore Work</h1>
             <div class="row">
-              <div class="card card-flush h-xl-375px h-725px d-flex mb-10 rounded-5"
-                style="background-color: #FFFCF5; border-color: #BEA364;">
-                <div class="card-body py-9">
-                  <div class="row">
-                    <div class="col-xl-5 col-lg-6 col-md-12 mb-5 text-center">
-                      <img src="assets/images/campusnext.png" class="h-200px h-md-300px" alt="">
-                    </div>
-                    <div class="col-xl-7 col-lg-6 col-md-12 d-flex align-items-center">
-                      <div class="d-flex flex-column ps-md-8 ps-0">
-                        <div class="text-md-start text-center">
-                          <h1 class="fw-bold fs-2x text-gray-800 mb-5">CampusNEXT University
-                            Management System</h1>
-                          <!-- <p class="fw-semibold fs-5 text-gray-800 mb-5"><span class="fw-bold text-gray-800">Project
-                              Clients
-                              :</span> American University in the Emirates , Umm Al
-                            Quwain University , Kuwait College of Science and Technology </p> -->
-                          <p class="fw-semibold fs-5 text-gray-700 mb-5">CampusNEXT is an all-in-one University
-                            Management System that streamlines operations from enrollment to alumni engagement. It
-                            integrates academics, staff, internships, events, and communication, creating a connected
-                            campus. By centralizing key functions, it boosts efficiency and empowers institutions to
-                            focus on education and research.</p>
-                          <div class="d-flex flex-wrap">
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">UI Design</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">UI Development</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">User Experience</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">Front End</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">Figma</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">HTML</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">CSS</span>
-                          </div>
 
-                          <button href="" class="btn-2 btn-2-xl btn-2-aue mt-md-5 mt-10">View in Details</button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+              <div class="col-md-6 col-12 mb-10">
+                <div
+                  class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
+                  style="background-color: #FFF7F6; border-color: #ED6961 !important; overflow: hidden;">
+                  <img src="./assets/images/aue-test-1.png" class="h-350px mt-20 ms-20 hover-scale" alt="">
                 </div>
+                <div class="mb-6">
+                  <span class="badge-3 badge-3-red me-2">Amarican University
+                    in the Emirates</span>
+                  <span class="badge-3 badge-3-blue">Web App</span>
+                </div>
+                <div class="fw-bold fs-2">A smart, all-in-one platform designed to streamline administration, enhance
+                  student success, and drive institutional growth.</div>
               </div>
 
-              <div class="card card-flush h-xl-375px h-600px d-flex mb-10 rounded-5"
-                style="background-color: #FEF8F8; border-color: #DA4941;">
-                <div class="card-body py-9">
-                  <div class="row">
-                    <div class="col-xl-5 col-lg-6 col-md-12 mb-md-0 mb-5 text-md-center text-center">
-                      <div class="text-md-center text-center">
-                        <img src="assets/images/portfolio2/campusNEXT-website-img.png" class="h-200px h-md-300px"
-                          alt="">
-                      </div>
-                    </div>
-                    <div class="col-xl-7 col-lg-6 col-md-12 d-flex align-items-center">
-                      <div class="d-flex flex-column ps-md-8 ps-0">
-                        <div class=" text-md-start text-center">
-                          <div class="row d-flex">
-                            <h1 class="fw-bold fs-2x text-gray-800 mb-5">CampusNEXT Product Website</h1>
-                            <p class="fw-semibold fs-5 text-gray-700"> The CampusNEXT product website showcases the
-                              system's features, client details, categorized services, and company information</p>
-                          </div>
-                          <div class="d-flex flex-wrap">
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">Web Development</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">User Experience</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">HTML</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">CSS</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">Java Script</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">Scala Hosting</span>
-                          </div>
-                          <div class="d-flex align-items-end mt-10">
-                            <a href="" class="btn-2 btn-2-xl btn-2-campusnext-web mt-5 me-2">View in
-                              Detail</a>
-                            <a href="https://campusnext.net/" target="_blank"
-                              class="btn-2 btn-2-xl btn-2-light mt-5">View Website</a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+              <div class="col-md-6 col-12 mb-10">
+                <div
+                  class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
+                  style="background-color: #F9FFF4; border-color: #88BA5D !important; overflow: hidden;">
+                  <img src="./assets/images/its-img.png" class="h-350px mt-20 ms-20 hover-scale" alt="">
                 </div>
-              </div>
-
-              <div class="card card-flush h-xl-375px h-725px d-flex mb-10 rounded-5"
-                style="background-color: #F9FFF4; border-color: #88BA5D;">
-                <div class="card-body py-9">
-                  <div class="row">
-                    <div class="col-xl-5 col-lg-6 col-md-12 mb-5 text-lg-start text-md-center text-center">
-                      <img src="assets/images/imagine-tech-sol-img.png" class="h-200px h-md-300px" alt="">
-                    </div>
-                    <div class="col-xl-7 col-lg-6 col-md-12 d-flex align-items-center">
-                      <div class="d-flex flex-column ps-md-8 ps-0">
-                        <div class="text-md-start text-center">
-                          <div class="row d-flex">
-                            <h1 class="fw-bold fs-2x text-gray-800 mb-5">Imagine Tech Solutions Company Website</h1>
-                            <p class="fw-semibold fs-5 text-gray-800 mb-5">ImagineTech Sol is a technology solutions
-                              company under ApplyTek, specializing in innovative digital solutions for businesses. With
-                              offices in Dubai and Khaplu, Gilgit-Baltistan, it focuses on delivering smart, scalable,
-                              and high-quality software tailored to drive growth. The goal is to empower startups and
-                              enterprises through innovation, collaboration, and excellence, creating lasting
-                              partnerships that fuel success.</p>
-                          </div>
-
-                          <div class="d-flex flex-wrap">
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">UI Design</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">UI Development</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">User Experience</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">Front End</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">Figma</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">HTML</span>
-                            <span class="badge-2 badge-2-outline badge-2-lg me-2 mb-2">CSS</span>
-                          </div>
-
-                          <div class="d-flex align-items-end mt-10">
-                            <a href="" class="btn-2 btn-2-xl btn-2-success mt-md-5 mt-10 me-2">View in Details</a>
-                            <a href="https://applytek.net/" target="_blank" class="btn-2 btn-2-xl btn-2-light mt-5">View
-                              Website</a>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                <div class="mb-6">
+                  <span class="badge-3 badge-3-green me-2">Imagine Tech Solutions</span>
+                  <span class="badge-3 badge-3-blue">Website</span>
                 </div>
+                <div class="fw-bold fs-2">Specializing in custom software, cloud solutions, and UI/UX design to drive
+                  business growth and digital transformation</div>
               </div>
-
 
             </div>
           </div>
@@ -226,34 +113,64 @@
           </div>
 
         </div>
+
       </section>
 
-      <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
+      <!-- <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
         data-id="akashkavinda" data-description="Support me on Buy me a coffee!" data-message="" data-color="#FF813F"
-        data-position="Right" data-x_margin="18" data-y_margin="18"></script>
+        data-position="Right" data-x_margin="18" data-y_margin="18"></script> -->
 
     </div>
+
+    <nav class="bottom-nav">
+      <a href="#home" class="nav-item active" data-target="home">
+          <i class="fas fa-home"></i>
+          <span>Home</span>
+      </a>
+      <a href="#about" class="nav-item" data-target="about">
+          <i class="fas fa-user"></i>
+          <span>About</span>
+      </a>
+      <a href="#work" class="nav-item" data-target="work">
+          <i class="fas fa-briefcase"></i>
+          <span>Works</span>
+      </a>
+      <a href="#contact" class="nav-item" data-target="contact">
+          <i class="fas fa-envelope"></i>
+          <span>Contact</span>
+      </a>
+  </nav>
+
   </div>
 
   <script>
+    // Get the modal
     var modal = document.getElementById("maintenanceModal");
+
+    // Get the <span> element that closes the modal
     var span = document.getElementsByClassName("close")[0];
+
+    //Get the OK button
     var okButton = document.getElementById("okButton");
 
+    // When the page loads, show the modal
     window.onload = function () {
       modal.style.display = "block";
     }
 
+    // When the user clicks on <span> (x), close the modal
     span.onclick = function () {
       modal.style.display = "none";
     }
 
+    // When the user clicks anywhere outside of the modal, close it
     window.onclick = function (event) {
       if (event.target == modal) {
         modal.style.display = "none";
       }
     }
 
+    //When the user clicks the OK button, close the modal
     okButton.onclick = function () {
       modal.style.display = "none";
     }
@@ -261,10 +178,10 @@
 
 
   <!-- JS Files -->
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
     referrerpolicy="no-referrer"></script>
   <script src="js/script.js"></script>
+  <script src="./assets/js/custom/custom.js"></script>
   <script src="js/style-switcher.js"></script>
   <script src="js/mail.js"></script>
   <script src="./projects/project.js"></script>
