--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="container">
 
           <!-- Hero Scection Start -->
-          <div class="section-padding" id="home">
+          <div class="section-padding" id="about">
             <div class="row">
 
               <div class="home-info">
@@ -71,7 +71,7 @@
           </div>
 
           <!-- Latest Projects Scection Start -->
-          <div class="section-padding" id="about">
+          <div class="section-padding" id="work">
 
             <h1 class="fs-3x fw-bold mb-md-15 mb-10">Explore Work</h1>
             <div class="row">
@@ -105,14 +105,27 @@
                   business growth and digital transformation</div>
               </div>
 
+              <div class="col-md-6 col-12 mb-10">
+                <div
+                  class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
+                  style="background-color: #FFFAF4; border-color: #EE9239 !important; overflow: hidden;">
+                  <img src="./assets/images/projects-banners/helloHR.png" class="h-350px mt-20 hover-scale" alt="">
+                </div>
+                <div class="mb-6">
+                  <span class="badge-3 badge-3-orange me-2">Hello HR</span>
+                  <span class="badge-3 badge-3-purple">Mobile App</span>
+                </div>
+                <div class="fw-bold fs-2">"Hello HR" is a mobile app that streamlines HR tasks attendance, leaves and
+                  payroll making HR processes easy.
+
+                </div>
+              </div>
+
+              <div class="app-container text-center">
+                <span class="text-gray-900 fw-semibold me-1 fs-5">© 2025 Akash Palandagama - Updating</span>
+              </div>
+
             </div>
-          </div>
-
-          <div class="app-container text-center">
-            <span class="text-gray-900 fw-semibold me-1 fs-5">© 2025 Akash Palandagama - Updating</span>
-          </div>
-
-        </div>
 
       </section>
 
@@ -123,23 +136,23 @@
     </div>
 
     <nav class="bottom-nav">
-      <a href="#home" class="nav-item active" data-target="home">
-          <i class="fas fa-home"></i>
-          <span>Home</span>
+      <a href="#home" class="nav-item active" data-target="about">
+        <i class="fas fa-smile"></i>
+        <span>About</span>
       </a>
-      <a href="#about" class="nav-item" data-target="about">
-          <i class="fas fa-user"></i>
-          <span>About</span>
+      <a href="#about" class="nav-item" data-target="work">
+        <i class="fa-solid fa-wand-magic-sparkles"></i>
+        <span>Work</span>
       </a>
       <a href="#work" class="nav-item" data-target="work">
-          <i class="fas fa-briefcase"></i>
-          <span>Works</span>
+        <i class="fas fa-briefcase"></i>
+        <span>Experiences</span>
       </a>
       <a href="#contact" class="nav-item" data-target="contact">
-          <i class="fas fa-envelope"></i>
-          <span>Contact</span>
+        <i class="fas fa-envelope"></i>
+        <span>Contact</span>
       </a>
-  </nav>
+    </nav>
 
   </div>
 
