New Files Added
update

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 <body>
 
-  <!-- ===== Main Container Start ===== -->
+  <!--Main Container Start-->
   <div class="main-container">
 
-    <!-- ====== Main Content Start ===== -->
+    <!-- Main Content Start -->
     <div class="main-content">
       <section class="home section">
 
@@ -87,7 +87,7 @@
                     in the Emirates</span>
                   <span class="badge-3 badge-3-blue">Web App</span>
                 </div>
-                <div class="fw-bold fs-2">A smart, all-in-one platform designed to streamline administration, enhance
+                <div class="fw-bold fs-3">A smart, all-in-one platform designed to streamline administration, enhance
                   student success, and drive institutional growth.</div>
               </div>
 
@@ -101,7 +101,7 @@
                   <span class="badge-3 badge-3-green me-2">Imagine Tech Solutions</span>
                   <span class="badge-3 badge-3-blue">Website</span>
                 </div>
-                <div class="fw-bold fs-2">Specializing in custom software, cloud solutions, and UI/UX design to drive
+                <div class="fw-bold fs-3">Specializing in custom software, cloud solutions, and UI/UX design to drive
                   business growth and digital transformation</div>
               </div>
 
@@ -109,25 +109,43 @@
                 <div
                   class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
                   style="background-color: #FFFAF4; border-color: #EE9239 !important; overflow: hidden;">
-                  <img src="./assets/images/projects-banners/helloHR.png" class="h-350px mt-20 hover-scale" alt="">
+                  <img src="./assets/images/projects-banners/helloHR.png" class="h-325px mt-20 hover-scale" alt="">
                 </div>
                 <div class="mb-6">
                   <span class="badge-3 badge-3-orange me-2">Hello HR</span>
-                  <span class="badge-3 badge-3-purple">Mobile App</span>
+                  <span class="badge-3 badge-3-dark">Mobile App</span>
                 </div>
-                <div class="fw-bold fs-2">"Hello HR" is a mobile app that streamlines HR tasks attendance, leaves and
+                <div class="fw-bold fs-3">Hello HR is a mobile app that streamlines HR tasks attendance, leaves and
                   payroll making HR processes easy.
 
                 </div>
               </div>
 
-              <div class="app-container text-center">
-                <span class="text-gray-900 fw-semibold me-1 fs-5">© 2025 Akash Palandagama - Updating</span>
+              <div class="col-md-6 col-12 mb-10">
+                <div
+                  class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
+                  style="background-color: #ece8ff; border-color: #8754fe !important; overflow: hidden;">
+                  <img src="./assets/images/projects-banners/singify-2.png" class="h-325px mt-20 hover-scale" alt="">
+                </div>
+                <div class="mb-6">
+                  <span class="badge-3 badge-3-purple me-2">Singify</span>
+                  <span class="badge-3 badge-3-dark">Mobile App</span>
+                </div>
+                <div class="fw-bold fs-3">Singify is an online music app that connects users with famous singers. Users
+                  can pay to listen to live performances and even sing along with the artists in real-time.
+
+                </div>
               </div>
 
             </div>
+          </div>
+
 
       </section>
+      <!-- Footer -->
+      <div class="section-padding" id="work">
+
+      </div>
 
       <!-- <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
         data-id="akashkavinda" data-description="Support me on Buy me a coffee!" data-message="" data-color="#FF813F"
