--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 </div>
                 <div class="mb-6">
                   <span class="badge-3 badge-3-orange me-2">Hello HR</span>
-                  <span class="badge-3 badge-3-dark">Mobile App</span>
+                  <span class="badge-3 badge-3-blue">Mobile App</span>
                 </div>
                 <div class="fw-bold fs-3">Hello HR is a mobile app that streamlines HR tasks attendance, leaves and
                   payroll making HR processes easy.
@@ -129,7 +129,23 @@
                 </div>
                 <div class="mb-6">
                   <span class="badge-3 badge-3-purple me-2">Singify</span>
-                  <span class="badge-3 badge-3-dark">Mobile App</span>
+                  <span class="badge-3 badge-3-blue">Mobile App</span>
+                </div>
+                <div class="fw-bold fs-3">Singify is an online music app that connects users with famous singers. Users
+                  can pay to listen to live performances and even sing along with the artists in real-time.
+
+                </div>
+              </div>
+
+              <div class="col-md-6 col-12 mb-10">
+                <div
+                  class="card card-flush border rounded-3 h-275px d-flex align-items-center justify-content-center mb-5"
+                  style="background-color: #dbedf2; border-color: #223541 !important; overflow: hidden;">
+                  <img src="./assets/images/projects-banners/gogodoc.png" class="h-325px mt-20 hover-scale" alt="">
+                </div>
+                <div class="mb-6">
+                  <span class="badge-3 badge-3-dark-blue me-2">Singify</span>
+                  <span class="badge-3 badge-3-blue">Mobile App</span>
                 </div>
                 <div class="fw-bold fs-3">Singify is an online music app that connects users with famous singers. Users
                   can pay to listen to live performances and even sing along with the artists in real-time.
@@ -140,39 +156,63 @@
             </div>
           </div>
 
+          <!-- Footer -->
+          <footer>
+            <div class="footer-main">
+              <div class="footer-content">
+                <h1 class="text-white fs-1">Transform Your Product with Data-Driven UX Design.</h1>
+                <p>From understanding user needs to designing seamless interfaces, I specialize in creating exceptional UX.  Let's leverage my skills and local insight to make your product stand out 😊</p>
+              </div>
+            </div>
+
+            <!-- <div class="footer-bottom">
+              <div class="footer-bottom-content">
+                <div class="social-links">
+                  <a href="#" target="_blank">LinkedIn</a>
+                  <a href="#" target="_blank">Dribbble</a>
+                  <a href="#" target="_blank">Behance</a>
+                  <a href="#" target="_blank">Twitter</a>
+                </div>
+                <div class="copyright">
+                  ©2024 Kushantha Charuka • webmade.day
+                </div>
+              </div>
+            </div> -->
+          </footer>
+
+        </div>
 
       </section>
-      <!-- Footer -->
-      <div class="section-padding" id="work">
 
-      </div>
-
-      <!-- <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js"
-        data-id="akashkavinda" data-description="Support me on Buy me a coffee!" data-message="" data-color="#FF813F"
-        data-position="Right" data-x_margin="18" data-y_margin="18"></script> -->
 
     </div>
 
-    <nav class="bottom-nav">
-      <a href="#home" class="nav-item active" data-target="about">
-        <i class="fas fa-smile"></i>
-        <span>About</span>
-      </a>
-      <a href="#about" class="nav-item" data-target="work">
-        <i class="fa-solid fa-wand-magic-sparkles"></i>
-        <span>Work</span>
-      </a>
-      <a href="#work" class="nav-item" data-target="work">
-        <i class="fas fa-briefcase"></i>
-        <span>Experiences</span>
-      </a>
-      <a href="#contact" class="nav-item" data-target="contact">
-        <i class="fas fa-envelope"></i>
-        <span>Contact</span>
-      </a>
-    </nav>
-
   </div>
+
+  <nav class="bottom-nav">
+    <a href="#home" class="nav-item active" data-target="about">
+      <i class="fas fa-smile"></i>
+      <span>About</span>
+    </a>
+    <a href="#about" class="nav-item" data-target="work">
+      <i class="fa-solid fa-wand-magic-sparkles"></i>
+      <span>Work</span>
+    </a>
+    <a href="#work" class="nav-item" data-target="work">
+      <i class="fas fa-briefcase"></i>
+      <span>Experiences</span>
+    </a>
+    <a href="#contact" class="nav-item" data-target="contact">
+      <i class="fas fa-envelope"></i>
+      <span>Contact</span>
+    </a>
+  </nav>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
+    referrerpolicy="no-referrer"></script>
+  <script src="./assets/js/custom/custom.js"></script>
+  <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
+  <script src="assets/plugins/global/plugins.bundle.js"></script>
 
   <script>
     // Get the modal
@@ -208,16 +248,6 @@
   </script>
 
 
-  <!-- JS Files -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"
-    referrerpolicy="no-referrer"></script>
-  <script src="js/script.js"></script>
-  <script src="./assets/js/custom/custom.js"></script>
-  <script src="js/style-switcher.js"></script>
-  <script src="js/mail.js"></script>
-  <script src="./projects/project.js"></script>
-  <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css" />
-  <script src="assets/plugins/global/plugins.bundle.js"></script>
 </body>
 
 </html>
