--- a/index.html
+++ b/index.html
@@ -40,13 +40,12 @@
 
                 <!-- hero text -->
                 <div class="mb-10">
-                  <div class="fs-2 fw-bold text-gray-800 mb-10"> <span class="highlight-span">Akash</span> is here, I
-                    Design. I Code. I Keep It Real 😀.
+                  <div class="fs-2 fw-bold text-gray-800 mb-10"> <span class="highlight-span">Akash</span> is here, I Design. I Code. I Keep It Real. 😀
                   </div>
 
                   <div class="fs-2 fw-normal text-gray-700 mb-10">I
                     I craft user-friendly interfaces with a developer’s mindset—because good design isn’t just about
-                    looking fancy, it’s about working smoothly. Every pixel has a purpose, every feature meets a need 
+                    looking fancy, it’s about working smoothly. Every pixel has a purpose, every feature meets a need.
 
                     <br><br>
                     Fueled by coffee, I design what’s needed, not just what’s trendy.☕
