--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 
                 <!-- hero text -->
                 <div class="mb-10">
-                  <div class="fs-2 fw-bold text-gray-800 mb-10"> <span class="highlight-span">Akash</span> is here, I Design. I Code. I Keep It Real. 😀
+                  <div class="fs-2 fw-bold text-gray-800 mb-10"> <span class="highlight-span">Akash</span> is here, <br>
+                    I Design. I Code. I Keep It Real. 😀
                   </div>
 
                   <div class="fs-2 fw-normal text-gray-700 mb-10">I
